# juchecraft

./: .gitignore  .rsync-filter  Doxyfile  LICENSE.txt  Makefile  README  SCCoordinate.cpp  SCCoordinate.h  SCException.h  SCGame.cpp  SCGame.h  SCObject.cpp  SCObject.h  SCObjectFactory.cpp  SCObjectFactory.h  SCObjectIdList.h  SCObjectList.cpp  SCObjectList.h  SCObjectPrototypes.cpp  SCObjectPrototypes.h  SCPlayer.cpp  SCPlayer.h  SCTarget.h  SCTypes.h  SCUnitAction.cpp  SCUnitAction.h  SCUnitActionList.h  SCUnitCommand.h  compat.h  config.h  defs.h  main.cpp  my_sdl.h  platform.h  smart_ptrs.h
actions/: Attack.cpp  Attack.h  Move.cpp  Move.h  UnitAction.cpp  UnitAction.h  UnitActionList.h  move.cpp  move.h
cmake/: .gitignore  CMakeLists.txt
docs/: .gitignore
libs/: CMakeLists.txt  Makefile  Makefile.zlib
libs/etc/: md5.c  md5.h
libs/jcimg/: jcimg.cpp  jcimg.h
libs/libmpq/SComp/: SComp.cpp
libs/libmpq/SFmpqapi/: SFmpqapi.cpp  SFmpqapi.h  windows.cpp  windows.h
libs/libmpqgrp/: grp.cpp  grp.h
libs/lua/src/: .gitignore  lua.h
libs/luacpp/: luacpp.cpp  luacpp.h  luacpp_lua.h
msvc/: .gitignore  mini_sc.sln
msvc/mini_sc/: mini_sc.vcproj  mini_sc.vcxproj  mini_sc.vcxproj.filters
objects/: SCBuildingObject.h  SCBuildingObjects.h  SCObjects.h  SCResourceObject.h  SCResourceObjects.h  SCUnitObject.h  SCUnitObjects.h
orders/: Move.h  UnitOrder.cpp  UnitOrder.h
res_raw/: Makefile
scripts/: lines.sh
src/: CMakeLists.txt  compat.h  config.h  defs.h  main.cpp  my_sdl.h  platform.h  smart_ptrs.h
src/game/: CMakeLists.txt  Coordinate.cpp  Coordinate.h  Exception.cpp  Exception.h  Game.cpp  Game.h  Object.cpp  Object.h  ObjectFactory.cpp  ObjectFactory.h  ObjectFilter.h  ObjectIdList.h  ObjectList.cpp  ObjectList.h  Player.cpp  Player.h  Target.cpp  Target.h  Types.h  UnitProductionManager.cpp  UnitProductionManager.h
src/game/actions/: Action.cpp  Action.h  ActionList.h  Actions.h  Attack.cpp  CMakeLists.txt  Move.cpp  Move.h  TargetedAction.cpp  TargetedAction.h  UnitAction.cpp  UnitAction.h  UnitActionList.h
src/game/actions/targeted/: Action_Attack.cpp  Action_Attack.h  Action_Move.cpp  Action_Move.h
src/game/orders/: Attack.cpp  Attack.h  CMakeLists.txt  Move.cpp  Move.h  Order.cpp  Order.h  OrderList.h  Order_Produce.cpp  Order_Produce.h  Orders.h  ProductionOrder.cpp  ProductionOrder.h  TargetedOrder.cpp  TargetedOrder.h  UnitOrder.cpp  UnitOrder.h  UnitOrderList.h
src/game/orders/secondary/: Order_Produce.cpp  Order_Produce.h
src/game/orders/targeted/: Order_Attack.cpp  Order_Attack.h  Order_Move.cpp  Order_Move.h
src/libs/: CMakeLists.txt
src/libs/jcimg/: jcimg.cpp  jcimg.h
src/libs/luacpp/: luacpp_lua.h
src/ui/: CMakeLists.txt  GameUI.cpp  GameUI.h
src/ui/dummy/: GameUI_dummy.h  SCGameUI_dummy.h
src/ui/ncurses/: GameUI_ncurses.cpp  GameUI_ncurses.h  SCGameUI_ncurses.cpp
src/ui/sdl/: GameUI_SDL.cpp  GameUI_SDL.h  SCGameUI_SDL.cpp
tools/: Makefile
ui/: SCGameUI.cpp  SCGameUI.h  SCUserInterface.cpp  SCUserInterface.h  SCUserInterface_SDL.cpp  SCUserInterface_SDL.h  SCUserInterface_ncurses.cpp  SCUserInterface_ncurses.h
(+63 files in other folders)
