
# JucheCraft CMake main file

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(mini_sc)

FIND_PACKAGE(ZLIB REQUIRED)
FIND_PACKAGE(BZip2 REQUIRED)
FIND_PACKAGE(PNG REQUIRED)
FIND_PACKAGE(JPEG REQUIRED)
FIND_PACKAGE(Freetype REQUIRED)

FIND_PACKAGE(SDL REQUIRED)
FIND_PACKAGE(SDL_ttf REQUIRED)
FIND_PACKAGE(SDL_image REQUIRED)


INCLUDE_DIRECTORIES(../src)
INCLUDE_DIRECTORIES(../src/libs)
INCLUDE_DIRECTORIES(../libs)
INCLUDE_DIRECTORIES(../libs/lua/src)


SET(CMAKE_BUILD_TYPE DEBUG)
#SET(CMAKE_BUILD_TYPE RELEASE)

IF(CMAKE_COMPILER_IS_GNUCXX)
	SET(DEFS "-D_REENTRANT -D_FILE_OFFSET_BITS=64 -D_LARGEFILE64_SOURCE=1")

	SET(CMAKE_CXX_FLAGS_DEBUG "-DDEBUG -g -O0 -fstack-protector-all -fstrict-aliasing -fno-omit-frame-pointer")
	SET(CMAKE_CXX_FLAGS_RELEASE "-DNDEBUG -O3")
	SET(CMAKE_CXX_FLAGS "-std=gnu++98 -finline-functions -Wall -Wextra -Wno-unused-parameter -Wshadow -fopenmp ${DEFS}")
ENDIF(CMAKE_COMPILER_IS_GNUCXX)




ADD_SUBDIRECTORY(../libs ./build/libs)
ADD_SUBDIRECTORY(../src ./build/src)



