

SET(MINI_SC_LIBS ${MINI_SC_LIBS} pthread dl)
SET(MINI_SC_LIBS ${MINI_SC_LIBS} ${ZLIB_LIBRARIES} ${BZIP2_LIBRARIES})
SET(MINI_SC_LIBS ${MINI_SC_LIBS} ${PNG_LIBRARIES} ${JPEG_LIBRARIES})
SET(MINI_SC_LIBS ${MINI_SC_LIBS} ${FREETYPE_LIBRARIES})
SET(MINI_SC_LIBS ${MINI_SC_LIBS} ${SDL_LIBRARY} ${SDLTTF_LIBRARY} ${SDLIMAGE_LIBRARY})
SET(MINI_SC_LIBS ${MINI_SC_LIBS} SDL_gfx)
SET(MINI_SC_LIBS ${MINI_SC_LIBS} ncursesw)

#INCLUDE_DIRECTORIES(.)
#INCLUDE_DIRECTORIES(../libs)
#INCLUDE_DIRECTORIES(../libs/lua/src)

ADD_SUBDIRECTORY(libs)
ADD_SUBDIRECTORY(game)
ADD_SUBDIRECTORY(ui)

SET(MINI_SC_LIBS ${MINI_SC_LIBS} mini_sc_game mini_sc_ui mini_sc_libs mini_sc_src_libs liblua)
SET(MINI_SC_SRCS main.cpp)

ADD_EXECUTABLE(mini_sc ${MINI_SC_SRCS})
TARGET_LINK_LIBRARIES(mini_sc ${MINI_SC_LIBS})
#SET_TARGET_PROPERTIES(mini_sc PROPERTIES COMPILE_FLAGS "${MINI_SC_CFLAGS}")
#SET_TARGET_PROPERTIES(mini_sc PROPERTIES LINK_FLAGS "")


